Fix bg gradient on ios

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -27,6 +27,5 @@ body {
                     background-image 150ms ease 0s;
         background: var(--bs-body-bg);
         background-image: var(--jz-bg-gradient);
-        background-attachment: fixed;
     }
 }
